Fix gallery on smaller screen

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,7 +10,8 @@
     }
 
     .item-gallery {
-        width: 480px;
+        min-width: 24em;
+        max-width: 480px;
         height: 480px;
         background-size: cover;
         background-position: center;
